拍摄视频分辨率优化根据设置的拍摄分辨结合手机分辨率自动选择适合本机分辨率的拍摄分辨率

--- a/ffmpeg/src/main/AndroidManifest.xml
+++ b/ffmpeg/src/main/AndroidManifest.xml
@@ -15,16 +15,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:screenOrientation="portrait"
             android:name=".MediaRecorderActivity"
             android:theme="@style/AppNoBarTheme" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".VideoPlayerActivity"
             android:theme="@style/AppNoBarTheme" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".SendSmallVideoActivity"
             android:theme="@style/AppNoBarTheme" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".videocut.VideoEditActivity"
             android:theme="@style/AppNoBarTheme" />
     </application>
